[gd_scene load_steps=15 format=3 uid="uid://cpkhp0eynbfj1"]

[ext_resource type="Script" path="res://scripts/creatures/moss_guy.gd" id="1_an01y"]
[ext_resource type="Texture2D" uid="uid://2wr3jo4t6yko" path="res://textures/creatures/moss_guy.tres" id="2_1htwi"]
[ext_resource type="Shader" path="res://shaders/hold_outline.gdshader" id="2_7s5np"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a4rlw"]
shader = ExtResource("2_7s5np")
shader_parameter/outline_color = Color(1, 0.45098, 0, 1)
shader_parameter/width = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1jj08"]
atlas = ExtResource("2_1htwi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6tjt"]
atlas = ExtResource("2_1htwi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e2pe"]
atlas = ExtResource("2_1htwi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6tq7"]
atlas = ExtResource("2_1htwi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7rch"]
atlas = ExtResource("2_1htwi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i021g"]
atlas = ExtResource("2_1htwi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkmy3"]
atlas = ExtResource("2_1htwi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xmok"]
atlas = ExtResource("2_1htwi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2o42e"]
animations = [{
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_1jj08")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_x6tjt")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_7e2pe")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_g6tq7")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7rch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i021g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkmy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xmok")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0in0"]
size = Vector2(52, 42)

[node name="MossGuy" type="CharacterBody2D" groups=["can_hold"]]
collision_layer = 17
script = ExtResource("1_an01y")
moveSpeed = 75.0
runSpeed = 200

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_a4rlw")
sprite_frames = SubResource("SpriteFrames_2o42e")
animation = &"walking"
autoplay = "walking"

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_o0in0")

[node name="FlightTrigger" type="Area2D" parent="."]
position = Vector2(0, 31)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FlightTrigger"]
position = Vector2(0, 1)
scale = Vector2(0.35, 0.4)
polygon = PackedVector2Array(-128, 0, 0.336761, 0, 128, 0, 124, -31, 111, -61, 91, -88, 63, -108, 33, -121, 0, -125, -33, -121, -64, -108, -90, -88, -111, -61, -123, -29)

[node name="SafetyBuffer" type="Area2D" parent="."]
position = Vector2(0, 31)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SafetyBuffer"]
visible = false
position = Vector2(0, 1)
scale = Vector2(2, 0.75)
polygon = PackedVector2Array(-128, 0, 0.336761, 0, 128, 0, 124, -31, 111, -61, 91, -88, 63, -108, 33, -121, 0, -125, -33, -121, -64, -108, -90, -88, -111, -61, -123, -29)

[node name="MouseDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetection"]
visible = false
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_o0in0")

[node name="HoldTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="FlightTrigger" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="SafetyBuffer" to="." method="_on_safety_buffer_body_exited"]
[connection signal="body_entered" from="MouseDetection" to="." method="_on_mouse_detection_body_entered"]
[connection signal="body_exited" from="MouseDetection" to="." method="_on_mouse_detection_body_exited"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_hold_timer_timeout"]
